--- a/src/html/05_ranking_points.html
+++ b/src/html/05_ranking_points.html
@@ -76,7 +76,7 @@
           </div>
           <div class="table-head">
             <div class="table-my">
-              <img src="../img/05/50@2x@2x.png" alt=""/>
+              <img src="../img/05/50.png" alt=""/>
               <p class="table-my-detail">我的名次<span>123</span></p>
               <p class="table-my-detail">等级<span>12</span></p>
               <p class="table-my-detail">积分<span>456456</span></p>
@@ -84,7 +84,7 @@
             <ul class="top-three">
               <li class="top-three-litem">
                 <div class="top-three-face">
-                    <img src="../img/05/50@2x@2x.png" alt="" class="face-img two">
+                    <img src="../img/05/50.png" alt="" class="face-img two">
                     <div class="points points-two">2</div>
                 </div>
                 <p class="one-nickname">博格巴</p>
@@ -93,16 +93,16 @@
               </li>
               <li class="top-three-litem one-item">
               <div class="top-three-face one-face">
-                  <img src="../img/05/50@2x@2x.png" alt="" class="face-img one">
+                  <img src="../img/05/50.png" alt="" class="face-img one">
                   <div class="points points-one">1</div>
-                  <img src="../img/05/Shape@2x.png" alt="" class="huanfgguan-icon">
+                  <img src="../img/05/shape2x.png" alt="" class="huanfgguan-icon">
               </div>
               <p class="one-nickname">格列兹曼</p>
               <p class="top-three-integral">积分 <span>666</span></p>
             </li>
             <li class="top-three-litem">
               <div class="top-three-face">
-                  <img src="../img/05/50@2x@2x.png" alt="" class="face-img three">
+                  <img src="../img/05/50.png" alt="" class="face-img three">
                   <div class="points points-three">3</div>
               </div>
               <p class="one-nickname">姆巴佩</p>
@@ -119,22 +119,22 @@
               <div class="table-title">积分</div>
             </div>
             <ul class="tr">
-              <li class="tr-ranking tr-ranking-one"><img src="../img/05/Group7@2x.png" alt=""></li>
-              <li class="tr-head"><img src="../img/05/50@2x@2x.png" alt=""></li>
+              <li class="tr-ranking tr-ranking-one"><img src="../img/05/group72x.png" alt=""></li>
+              <li class="tr-head"><img src="../img/05/50.png" alt=""></li>
               <li class="tr-name">格列兹曼</li>
               <li class="tr-lv"><div class="lv">LV3</div></li>
               <li class="tr-point">36200</li>
             </ul>
             <ul class="tr tr-even">
-              <li class="tr-ranking"><img src="../img/05/Group8@2x.png" alt=""></li>
-              <li class="tr-head"><img src="../img/05/50@2x@2x.png" alt=""></li>
+              <li class="tr-ranking"><img src="../img/05/group82x.png" alt=""></li>
+              <li class="tr-head"><img src="../img/05/50.png" alt=""></li>
               <li class="tr-name">格列兹曼</li>
               <li class="tr-lv"><div class="lv">LV3</div></li>
               <li class="tr-point">36200</li>
             </ul>
             <ul class="tr">
-              <li class="tr-ranking"><img src="../img/05/Group9@2x.png" alt=""></li>
-              <li class="tr-head"><img src="../img/05/50@2x@2x.png" alt=""></li>
+              <li class="tr-ranking"><img src="../img/05/group92x.png" alt=""></li>
+              <li class="tr-head"><img src="../img/05/50.png" alt=""></li>
               <li class="tr-name">格列兹曼</li>
               <li class="tr-lv"><div class="lv">LV3</div></li>
               <li class="tr-point">36200</li>
