--- a/src/html/07_personal_data.html
+++ b/src/html/07_personal_data.html
@@ -60,18 +60,18 @@
                     <span>个人资料</span>
                 </p>
                 <div class="person-head">
-                    <img class="user-face" src="../img/05/50@2x@2x.png" alt="">
+                    <img class="user-face" src="../img/05/50.png" alt="">
                     <div class="edit-list">
                         <div class="edit-item"></div>
                         昵称未设置
                         <!-- 未设置昵称图标 -->
-                        <img class="edit-icon" src="../img/07/Rectangle@2x.png" alt="">
+                        <img class="edit-icon" src="../img/07/rectangle2x.png" alt="">
                     </div>
                     <div class="change-possword">修改密码</div>
                 </div>
                 <div class="data-detail">
                     <p class="title title2">基础信息
-                        <img class="edit-icon" src="../img/07/Rectangle 3@2x.png" alt="">
+                        <img class="edit-icon" src="../img/07/rectangle32x.png" alt="">
                     </p>
                     <div class="detail-list">
                         <div class="detail-item">
@@ -113,7 +113,7 @@
                 </div>
                 <div class="data-detail2">
                     <p class="title2">基础信息
-                        <img class="edit-icon" src="../img/07/Rectangle 3@2x.png" alt="">
+                        <img class="edit-icon" src="../img/07/rectangle32x.png" alt="">
                     </p>
                     <div class="change-detail-list">
                         <div class="change-detail-item">
