--- a/src/html/09_honour.html
+++ b/src/html/09_honour.html
@@ -104,18 +104,18 @@
                       </ul>
                       <div class="certificate-list-out">
                       <ul class="certificate-list">
-                        <li class="certificate-item"><img src="../img/06/Group4@2x.png" alt=""></li>
-                        <li class="certificate-item"><img src="../img/06/Group4@2x.png" alt=""></li>
-                        <li class="certificate-item"><img src="../img/06/Group4@2x.png" alt=""></li>
-                        <li class="certificate-item"><img src="../img/06/Group4@2x.png" alt=""></li>
-                        <li class="certificate-item"><img src="../img/06/Group4@2x.png" alt=""></li>
-                        <li class="certificate-item"><img src="../img/06/Group4@2x.png" alt=""></li>
-                        <li class="certificate-item"><img src="../img/06/Group4@2x.png" alt=""></li>
-                        <li class="certificate-item"><img src="../img/06/Group4@2x.png" alt=""></li>
-                        <li class="certificate-item"><img src="../img/06/Group4@2x.png" alt=""></li>
-                        <li class="certificate-item"><img src="../img/06/Group4@2x.png" alt=""></li>
-                        <li class="certificate-item"><img src="../img/06/Group4@2x.png" alt=""></li>
-                        <li class="certificate-item"><img src="../img/06/Group4@2x.png" alt=""></li>
+                        <li class="certificate-item"><img src="../img/06/group42x.png" alt=""></li>
+                        <li class="certificate-item"><img src="../img/06/group42x.png" alt=""></li>
+                        <li class="certificate-item"><img src="../img/06/group42x.png" alt=""></li>
+                        <li class="certificate-item"><img src="../img/06/group42x.png" alt=""></li>
+                        <li class="certificate-item"><img src="../img/06/group42x.png" alt=""></li>
+                        <li class="certificate-item"><img src="../img/06/group42x.png" alt=""></li>
+                        <li class="certificate-item"><img src="../img/06/group42x.png" alt=""></li>
+                        <li class="certificate-item"><img src="../img/06/group42x.png" alt=""></li>
+                        <li class="certificate-item"><img src="../img/06/group42x.png" alt=""></li>
+                        <li class="certificate-item"><img src="../img/06/group42x.png" alt=""></li>
+                        <li class="certificate-item"><img src="../img/06/group42x.png" alt=""></li>
+                        <li class="certificate-item"><img src="../img/06/group42x.png" alt=""></li>
                       </ul>
                     </div>  
                   </div>  
@@ -124,9 +124,9 @@
                 <div class="rank-tab">我的军衔</div>
                 <div class="rank-content">
                     <div class="rank-img-list1">
-                        <img class="rankImg1" src="../img/09/Rectangle@2x.png" alt="">
-                        <img class="fill_11" src="../img/09/Fill 11@2x.png" alt="">
-                        <img class="rankImg2" src="../img/09/RectangleCopy@2x.png" alt="">
+                        <img class="rankImg1" src="../img/09/rectangle2x.png" alt="">
+                        <img class="fill_11" src="../img/09/fill112x.png" alt="">
+                        <img class="rankImg2" src="../img/09/rectanglecopy2x.png" alt="">
                     </div>
                     <p class="rank-num">当前拥有<span>40</span>个证书</p>
                     <div class="rank-progress">
@@ -135,7 +135,7 @@
                         </i><span>40</span>/56
                     </div>
                     <p class="rank-tip2">再获得 10 个证书，升级到<span>三等兵</span></p>
-                    <img class="rankImg3" src="../img/09/Group_3@2x.png" alt="">
+                    <img class="rankImg3" src="../img/09/group32x.png" alt="">
 
                 </div>
                 </section>
