--- a/src/html/29_finish_grammar.html
+++ b/src/html/29_finish_grammar.html
@@ -65,7 +65,7 @@
                 </p>
                 <div class="head">
                     <p class="book-name">牛津上海版-二年级上册</p>
-                    <img class="reflash-icon" src="../img/029/Combined_Shape@2x.png" alt="">
+                    <img class="reflash-icon" src="../img/029/combinedshape2x.png" alt="">
                     <p class="reflesh-title">更换课程</p>
                     <a class="back">返回课程中心</a>
                 </div>
@@ -105,20 +105,20 @@
                     <div class="content-right">
                       <div class="reword-list">
                         <div class="reword-litem">
-                          <img class="reword-icon" src="../img/029/Group_3@2x.png" alt="">
+                          <img class="reword-icon" src="../img/029/group32x.png" alt="">
                           <p class="reword-tip1">互相学习</p>
                           <p class="reword-tip2">已完成<span>2</span>次</p>
                           <button class="reword-tip3">继续学习</button>
                         </div>
                         <div class="reword-litem">
-                          <img class="reword-icon" src="../img/029/Group_6@2x.png" alt="">
+                          <img class="reword-icon" src="../img/029/group62x.png" alt="">
                           <p class="reword-tip1">学后智测</p>
                           <p class="reword-tip2">最高分时<span>90</span></p>
                           <button class="reword-tip3">立即闯关</button>
                         </div>
                       </div>
 
-                    <img class="content-right-img1" src="../img/029/Group@2x.png" alt="">
+                    <img class="content-right-img1" src="../img/029/group2x.png" alt="">
                     </div>
                 </div>
                 </section>
