--- a/src/html/30_Interactive_learn.html
+++ b/src/html/30_Interactive_learn.html
@@ -185,7 +185,7 @@
                             </form>
                             <p class="knowladge-tips">提示：提示内容提示内容（错误一次触发）/解析：解析内容解析内容（正确填写后显示，替换提示）</p>
                             <div class="knowlage-img">
-                                <img class="knowlage-url" src="../img/06/Group4@2x.png" alt="">
+                                <img class="knowlage-url" src="../img/06/group42x.png" alt="">
                             </div>
                             <ul class="questions">
                                 <p class="questions-title">题干题干题干题干题干题干题干题干题干题干题干题干</p>
@@ -216,7 +216,7 @@
                     <div class="section-content">
                         <div class="question-type">
                             <div class="type-text">
-                                <img class="question-icon" src="../img/30/CombinedShape@2x.png" alt="">
+                                <img class="question-icon" src="../img/30/combinedshape2x.png" alt="">
                                 选择题
                             </div>
                             <ul class="questions">
@@ -263,7 +263,7 @@
                         </div>
                         <div class="question-type">
                             <div class="type-text">
-                                <img class="question-icon" src="../img/30/CombinedShape1@2x.png" alt="">
+                                <img class="question-icon" src="../img/30/combinedshape12x.png" alt="">
                                 填空题
                             </div>
                             <form action=""></form>
@@ -276,7 +276,7 @@
                             </form>
                             <button class="continue-btn">继续学习</button>
                         </div>
-                        <img class="more-icon" src="../img/30/Shape@2x.png" alt="">
+                        <img class="more-icon" src="../img/30/shape2x.png" alt="">
                     </div>
 
                 </section>
