--- a/src/html/06_shopping.html
+++ b/src/html/06_shopping.html
@@ -55,8 +55,8 @@
     <div class="main">
       <div class="linye-body">
         <div class="my-detail">
-            <img class="user-face" src="../img/05/50@2x@2x.png" alt="">
-            <img class="rectangle" src="../img/06/Rectangle@2x.png" alt="">
+            <img class="user-face" src="../img/05/50.png" alt="">
+            <img class="rectangle" src="../img/06/rectangle2x.png" alt="">
             <p class="my-money">我的学币：<span>66666</span></p>
             <p class="money-record">学币获取记录</p>
             <div class="line1"></div>
@@ -65,7 +65,7 @@
          <div class="shop-body">
              <ul class="goods-list">
                  <li class="goods-item">
-                     <img class="goods-img" src="../img/06/Group4@2x.png" alt="">
+                     <img class="goods-img" src="../img/06/group42x.png" alt="">
                      <div class="goods-name">商品名称</div>
                      <div class="goods-bottom">
                          <div class="goods-price">1200金币</div>
@@ -74,7 +74,7 @@
                      <div class="goods-num">库存 999</div>
                  </li>
                  <li class="goods-item">
-                     <img class="goods-img" src="../img/06/Group4@2x.png" alt="">
+                     <img class="goods-img" src="../img/06/group42x.png" alt="">
                      <div class="goods-name">商品名称</div>
                      <div class="goods-bottom">
                          <div class="goods-price">1200金币</div>
@@ -83,7 +83,7 @@
                      <div class="goods-num">库存 999</div>
                  </li>
                  <li class="goods-item">
-                     <img class="goods-img" src="../img/06/Group4@2x.png" alt="">
+                     <img class="goods-img" src="../img/06/group42x.png" alt="">
                      <div class="goods-name">商品名称</div>
                      <div class="goods-bottom">
                          <div class="goods-price">1200金币</div>
@@ -92,7 +92,7 @@
                      <div class="goods-num">库存 999</div>
                  </li>
                  <li class="goods-item">
-                     <img class="goods-img" src="../img/06/Group4@2x.png" alt="">
+                     <img class="goods-img" src="../img/06/group42x.png" alt="">
                      <div class="goods-name">商品名称</div>
                      <div class="goods-bottom">
                          <div class="goods-price">1200金币</div>
@@ -101,7 +101,7 @@
                      <div class="goods-num">库存 999</div>
                  </li>
                  <li class="goods-item">
-                     <img class="goods-img" src="../img/06/Group4@2x.png" alt="">
+                     <img class="goods-img" src="../img/06/group42x.png" alt="">
                      <div class="goods-name">商品名称</div>
                      <div class="goods-bottom">
                          <div class="goods-price">1200金币</div>
@@ -110,7 +110,7 @@
                      <div class="goods-num">库存 999</div>
                  </li>
                  <li class="goods-item">
-                     <img class="goods-img" src="../img/06/Group4@2x.png" alt="">
+                     <img class="goods-img" src="../img/06/group42x.png" alt="">
                      <div class="goods-name">商品名称</div>
                      <div class="goods-bottom">
                          <div class="goods-price">1200金币</div>
@@ -119,7 +119,7 @@
                      <div class="goods-num goods-num-none">库存 999</div>
                  </li>
                  <li class="goods-item">
-                     <img class="goods-img" src="../img/06/Group4@2x.png" alt="">
+                     <img class="goods-img" src="../img/06/group42x.png" alt="">
                      <div class="goods-name">商品名称</div>
                      <div class="goods-bottom">
                          <div class="goods-price">1200金币</div>
@@ -130,14 +130,14 @@
              </ul>
             <div class="change-page">
              <div class="page-list">
-                <button class="last-page-btn"><img src="../img/06/Group5@2x.png" alt=""></button>
+                <button class="last-page-btn"><img src="../img/06/group52x.png" alt=""></button>
                 <div class="page-item page-selectd">1</div>
                 <div class="page-item">2</div>
                 <div class="page-item">3</div>
                 <div class="page-item">4</div>
                 <div class="page-item">5</div>
                 <div class="page-item">6</div>
-                <button class="last-page-btn"><img src="../img/06/Group7@2x.png" alt=""></button>
+                <button class="last-page-btn"><img src="../img/06/group72x.png" alt=""></button>
              </div>
              <p>共30页</p>
              <p>到第</p>
