--- a/src/html/15_study_word.html
+++ b/src/html/15_study_word.html
@@ -81,7 +81,7 @@
                 <p class="en-word">word</p>
                 <p class="alphabet-wp clearfix">
                   <span class="alphabet">[wɜ:d]</span>
-                  <a href="javascript:;" class="alphabet-a"></a>
+                  <a href="javascript:;" class="horn-a"></a>
                 </p>
                 <p class="word-mean"><span>n. </span>单词；话语；诺言；消息；</p>
                 <p class="word-mean"><span>vt.</span>措辞，用词；用言语表达；</p>
@@ -120,10 +120,6 @@
         </div>
       </div>
     </div>
-    <div class="click-status">
-        <a href="javascript:void(0)"></a>
-        <p>点击状态</p>
-    </div>
   </div>
    <!-- build:foot -->
     <!-- 底部 -->
@@ -142,6 +138,7 @@
     </div>
     <!-- endbuild -->
   <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+  <script src="../js/main_wj.js"></script>
 </body>
 
 </html>
