--- a/src/html/16_study_word_2.html
+++ b/src/html/16_study_word_2.html
@@ -81,7 +81,7 @@
                 <p class="en-word">word</p>
                 <p class="alphabet-wp clearfix">
                   <span class="alphabet">[wɜ:d]</span>
-                  <a href="javascript:;" class="alphabet-a"></a>
+                  <a href="javascript:;" class="horn-a"></a>
                 </p>
               </div>
               <div class="preview-right">
@@ -136,6 +136,7 @@
     </div>
     <!-- endbuild -->
   <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+  <script src="../js/main_wj.js"></script>
 </body>
 
 </html>
