--- a/src/html/part/sidebar.html
+++ b/src/html/part/sidebar.html
@@ -1,4 +1,4 @@
-<!-- sidebar-->
+<!-- 左侧菜单 -->
     <aside class="aside">
       <div class="aside-inner">
         <nav data-sidebar-anyclick-close="" class="sidebar">
