--- a/src/html/模板.html
+++ b/src/html/模板.html
@@ -30,7 +30,7 @@
           <small>同列副标题</small>
         </div>
         <div class="row">
-          <div class="col-xs-12 text-center">
+          <div class="col-xs-12">
             
           </div>
         </div>
