--- a/src/html/studyreport_overall.html
+++ b/src/html/studyreport_overall.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="../css/theme-e.css">
   <!-- endbuild -->
 
+
 </head>
 
 <body>
@@ -69,8 +70,9 @@
     </header>
     <!-- endbuild -->
 
+
     <!-- build:sidebar -->
-    <!-- sidebar-->
+    <!-- 左侧菜单 -->
     <aside class="aside">
       <div class="aside-inner">
         <nav data-sidebar-anyclick-close="" class="sidebar">
@@ -123,6 +125,7 @@
       </div>
     </aside>
     <!-- endbuild -->
+
 
     <!-- 主要内容 -->
     <section>
@@ -314,6 +317,7 @@
     </footer>
     <!-- endbuild -->
 
+
   </div>
 
   <!-- build:js -->
@@ -327,6 +331,7 @@
   <script src="../js/vendor/jquery-localize-i18n/dist/jquery.localize.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 </body>
 
