--- a/src/html/part/head.html
+++ b/src/html/part/head.html
@@ -21,25 +21,16 @@
               </a>
             </li>
           </ul>
-          <ul class="nav navbar-nav navbar-right">
+          <ul class="nav navbar-nav navbar-right mu-head-user">
             <li>
-              <a href="#" data-search-open="">
-                <em class="icon-magnifier"></em>
-              </a>
+              <span><i class="fa fa-user"></i>admin</span><span>|</span>
             </li>
             <li>
-              <a href="#" data-toggle-state="offsidebar-open" data-no-persist="true">
-                <em class="icon-notebook"></em>
+              <a href="#">
+                退出
               </a>
             </li>
           </ul>
         </div>
-        <form role="search" action="search.html" class="navbar-form">
-          <div class="form-group has-feedback">
-            <input type="text" placeholder="Type and hit enter ..." class="form-control">
-            <div data-search-dismiss="" class="fa fa-times form-control-feedback"></div>
-          </div>
-          <button type="submit" class="hidden btn btn-default">Submit</button>
-        </form>
       </nav>
     </header>
