--- a/src/html/part/sidebar.html
+++ b/src/html/part/sidebar.html
@@ -3,9 +3,12 @@
       <div class="aside-inner">
         <nav data-sidebar-anyclick-close="" class="sidebar">
           <ul class="nav">
+            <li class="nav-heading ">
+              <span>欢迎来到智厢逢教师后台</span>
+            </li>
             <li class=" ">
               <a href="#studyreport" title="学习报告" data-toggle="collapse">
-                <em class="icon-folder"></em>
+                <em class="icon-speedometer"></em>
                 <span>学习报告</span>
               </a>
               <ul id="studyreport" class="nav sidebar-subnav collapse">
@@ -24,7 +27,7 @@
             </li>
             <li class=" ">
               <a href="#coursemanagement" title="课程管理" data-toggle="collapse">
-                <em class="icon-folder"></em>
+                <em class="icon-graduation"></em>
                 <span>课程管理</span>
               </a>
               <ul id="coursemanagement" class="nav sidebar-subnav collapse">
