--- a/src/html/模板.html
+++ b/src/html/模板.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="description" content="">
   <meta name="keywords" content="">
-  <title>学习报告-总体报告</title>
+  <title>这里是Title</title>
   <!-- build:css -->
   
   <!-- endbuild -->
@@ -31,7 +31,7 @@
         </div>
         <div class="row">
           <div class="col-xs-12">
-            
+            这里是内容
           </div>
         </div>
       </div>
