--- a/src/html/30_Interactive_learn.html
+++ b/src/html/30_Interactive_learn.html
@@ -19,8 +19,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
-    <link rel="stylesheet" href="/css/main_linye.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/main_linye.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body class="linye-learn">
@@ -288,7 +288,7 @@
     </div>
 
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
-    <script language="javascript" src="/js/main_linye.js" defer="defer"> </script>
+    <script language="javascript" src="../js/main_linye.js" defer="defer"> </script>
     <script type="text/javascript">
         window.onload = function () {
             progressColor(40, 60, 780);
