--- a/src/html/05_ranking_points.html
+++ b/src/html/05_ranking_points.html
@@ -18,8 +18,8 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   
-  <link rel="stylesheet" href="/css/main_linye.css">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="../css/main_linye.css">
+  <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body class="linye-ranking-points">
@@ -146,7 +146,7 @@
   </div>
   
   <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
-  <script src="/js/main_linye.js"></script>
+  <script src="../js/main_linye.js"></script>
 </body>
 
 </html>
