--- a/src/html/12_course.html
+++ b/src/html/12_course.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html class='xc-html'>
 
 <head>
   <meta content="webkit" name="renderer" />
@@ -214,8 +214,8 @@
                           <div class="course-list-right">
                             <div class="course-list-classes">
                               <p class="course-list-classes-item">课文跟读</p>
-                              <p class="course-list-classes-item">词义背诵</p>
-                              <p class="course-list-classes-item">看字组句</p>
+                              <p class="course-list-classes-item active">词义背诵</p>
+                              <p class="course-list-classes-item active">看字组句</p>
                               <p class="course-list-classes-item">默写填空</p>
                             </div>
                           </div>
