--- a/src/html/33_intelText_8.html
+++ b/src/html/33_intelText_8.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html class='xc-html'>
 
 <head>
   <meta content="webkit" name="renderer" />
@@ -52,7 +52,7 @@
   </header>
 
   <!-- endbuild -->
-  <div class="wrap">
+  <div class="wrap ml">
     <div class="main readText-main">
       <div class="xc-container">
         <div class="xc-brand">
@@ -69,8 +69,8 @@
           </div>
           <div class="intelText-classes-box">
             <ul class="intelText-classes" id="intelText-classes">
-              <li class="intelText-class active">基础知识</li>
-              <li class="intelText-class">阅读理解</li>
+              <li class="intelText-class">基础知识</li>
+              <li class="intelText-class active">阅读理解</li>
               <span class="intelText-line"></span>
             </ul>
             <div class="intelText-classes-des">词汇与语法总分：
@@ -82,12 +82,11 @@
           </div>
           <div class="intelText-classNum-box">
             <ul class="intelText-classNum">
-              <li class="intelText-classNum-items active">Ⅰ</li>
-              <li class="intelText-classNum-items">Ⅱ</li>
-              <li class="intelText-classNum-items">Ⅲ</li>
-              <li class="intelText-classNum-items">Ⅳ</li>
-              <li class="intelText-classNum-items">Ⅴ</li>
-              <li class="intelText-classNum-items">Ⅵ</li>
+              <li class="intelText-classNum-items">A</li>
+              <li class="intelText-classNum-items active">B</li>
+              <li class="intelText-classNum-items">C</li>
+              <li class="intelText-classNum-items">D</li>
+              <li class="intelText-classNum-items">E</li>
             </ul>
           </div>
         </div>
