--- a/src/html/41_realText_error.html
+++ b/src/html/41_realText_error.html
@@ -52,7 +52,7 @@
   </header>
 
   <!-- endbuild -->
-  <div class="wrap">
+  <div class="wrap ml">
     <div class="main readText-main">
       <div class="xc-container">
         <div class="xc-brand">
