--- a/src/html/27_readText_5.html
+++ b/src/html/27_readText_5.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html class='xc-html'>
 
 <head>
   <meta content="webkit" name="renderer" />
@@ -52,7 +52,7 @@
     </header>
   
     <!-- endbuild -->
-  <div class="wrap">
+  <div class="wrap mt">
     <div class="main readText-main">
       <div class="xc-container">
         <div class="xc-brand">
