--- a/src/html/33_intelText_5.html
+++ b/src/html/33_intelText_5.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html class='xc-html'>
 
 <head>
   <meta content="webkit" name="renderer" />
@@ -52,7 +52,7 @@
   </header>
 
   <!-- endbuild -->
-  <div class="wrap">
+  <div class="wrap ml">
     <div class="main readText-main">
       <div class="xc-container">
         <div class="xc-brand">
@@ -82,11 +82,11 @@
           </div>
           <div class="intelText-classNum-box">
             <ul class="intelText-classNum">
-              <li class="intelText-classNum-items active">Ⅰ</li>
+              <li class="intelText-classNum-items">Ⅰ</li>
               <li class="intelText-classNum-items">Ⅱ</li>
               <li class="intelText-classNum-items">Ⅲ</li>
               <li class="intelText-classNum-items">Ⅳ</li>
-              <li class="intelText-classNum-items">Ⅴ</li>
+              <li class="intelText-classNum-items active">Ⅴ</li>
               <li class="intelText-classNum-items">Ⅵ</li>
             </ul>
           </div>
