--- a/src/html/coursemanagement_class.html
+++ b/src/html/coursemanagement_class.html
@@ -96,7 +96,7 @@
               </a>
               <ul id="coursemanagement" class="nav sidebar-subnav collapse">
                 <li class="sidebar-subnav-header">课程管理</li>
-                <li class=" ">
+                <li class="active">
                   <a href="coursemanagement_class.html" title="班级课程">
                     <span>班级课程</span>
                   </a>
