--- a/src/html/coursemanagement_mode.html
+++ b/src/html/coursemanagement_mode.html
@@ -106,7 +106,7 @@
                     <span>学习任务</span>
                   </a>
                 </li>
-                <li class=" ">
+                <li class="active">
                   <a href="coursemanagement_mode.html" title="复习模式">
                     <span>复习模式</span>
                   </a>
