--- a/src/html/coursemanagement_task.html
+++ b/src/html/coursemanagement_task.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="description" content="">
   <meta name="keywords" content="">
-  <title>学习报告-总体报告</title>
+  <title>课程管理-学习任务</title>
   <!-- build:css -->
   <link rel="stylesheet" href="../js/vendor/fontawesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="../js/vendor/simple-line-icons/css/simple-line-icons.css">
@@ -101,7 +101,7 @@
                     <span>班级课程</span>
                   </a>
                 </li>
-                <li class=" ">
+                <li class="active">
                   <a href="coursemanagement_task.html" title="学习任务">
                     <span>学习任务</span>
                   </a>
