--- a/src/html/studyreport_all.html
+++ b/src/html/studyreport_all.html
@@ -88,7 +88,7 @@
                     <span>总体报告</span>
                   </a>
                 </li>
-                <li class=" ">
+                <li class="active">
                   <a href="studyreport_all.html" title="全部报告">
                     <span>全部报告</span>
                   </a>
