--- a/src/html/studyreport_overall.html
+++ b/src/html/studyreport_overall.html
@@ -80,7 +80,7 @@
               </a>
               <ul id="studyreport" class="nav sidebar-subnav collapse">
                 <li class="sidebar-subnav-header">学习报告</li>
-                <li class=" ">
+                <li class="active">
                   <a href="studyreport_overall.html" title="总体报告">
                     <span>总体报告</span>
                   </a>
